--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -56,9 +56,29 @@
             </div>
             <div class="form-group">
                 <label for="department">Department</label>
-                <select id="department"  name="department" [(ngModel)]="department" class="form-control">
-                    <option *ngFor="let dept of departments" [value]= dept.id >{{dept.name}}</option>
+                <select id="department" name="department" [(ngModel)]="department" class="form-control">
+                    <option *ngFor="let dept of departments" [value]=dept.id>{{dept.name}}</option>
                 </select>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-4">
+                    <label for="dateOfBirth">Date of Birth</label>
+                    <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dateOfBirth" placement="top"
+                        class="form-control" type="text" bsDatepicker [bsConfig]="datePickerConfig" />
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label for="photoPath">Photo Path</label>
+                <input id="photoPath" type="text" class="form-control" name="photoPath" [(ngModel)]="photoPath">
+            </div>
+            <div class="form-group">
+                <button (click)="togglePhotoPreview()" class="btn btn-primary">
+                  {{previewPhoto ? "Hide " : "Show " }} Preview
+                </button>
+              </div>
+            <div class="form-group">
+                <img [src]="photoPath" height="200" width="200" *ngIf="previewPhoto"/>
             </div>
         </div>
 
