--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -1,34 +1,47 @@
-<form #employeeForm="ngForm" (ngSubmit)="saveEmployee(employeeForm)">
+<form #employeeForm="ngForm" (ngSubmit)="saveEmployee(employee)">
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">Create Employee</h3>
         </div>
         <div class="panel-body">
-
-            <div class="form-group">
-                <label for="fullName">Full Name</label>
-                <input id="fullName" type="text" class="form-control" name="fullName" [(ngModel)]="fullName">
+            <div class="form-group" [class.has-error]="name.invalid && name.touched" [class.has-success]="name.valid">
+                <label for="name" class="control-label">Name</label>
+                <input id="name" required type="text" class="form-control" name="name" [(ngModel)]="employee.name"
+                    #name="ngModel">
+                <span class="help-block" *ngIf="name.invalid && name.touched">
+                    Name is required
+                </span>
             </div>
 
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input id="email" type="text" class="form-control" name="email" [(ngModel)]="email">
+            <div class="form-group" [class.has-error]="email.invalid && email.touched">
+                <label for="email" class="control-label">Email</label>
+                <input id="email" required email type="text" class="form-control" name="email"
+                    [(ngModel)]="employee.email" #email="ngModel">
+                <span class="help-block" *ngIf="email.errors?.required && email.touched">
+                    Email is required
+                </span>
+                <span class="help-block" *ngIf="email.errors?.email && email.touched">
+                    Email is Invalid
+                </span>
             </div>
 
             <div class="form-group">
                 <label for="phoneNumber">Phone Number</label>
-                <input id="phoneNumber" type="text" class="form-control" name="phoneNumber" [(ngModel)]="phoneNumber">
+                <input id="phoneNumber" type="text" class="form-control" name="phoneNumber"
+                    [(ngModel)]="employee.phoneNumber">
             </div>
 
             <div class="form-group">
                 <label>Contact Preference</label>
                 <div class="form-control">
                     <label class="radio-inline">
-                        <input type="radio" name="contactPreference" value="email" [(ngModel)]="contactPreference">
+                        <input type="radio" name="contactPreference" value="email"
+                            [(ngModel)]="employee.contactPreference">
                         Email
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" name="contactPreference" value="phone" [(ngModel)]="contactPreference">
+                        <input type="radio" name="contactPreference" value="phone"
+                            [(ngModel)]="employee.contactPreference">
                         Phone
                     </label>
                 </div>
@@ -38,11 +51,11 @@
                 <label>Gender</label>
                 <div class="form-control">
                     <label class="radio-inline">
-                        <input type="radio" name="gender" value="male" [(ngModel)]="gender">
+                        <input type="radio" name="gender" value="male" [(ngModel)]="employee.gender">
                         Male
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" name="gender" value="female" [(ngModel)]="gender">
+                        <input type="radio" name="gender" value="female" [(ngModel)]="employee.gender">
                         Female
                     </label>
                 </div>
@@ -50,42 +63,46 @@
             <div class="form-group">
                 <div class="form-control">
                     <label class="checkbox-inline">
-                        <input type="checkbox" name="isActive" [(ngModel)]="isActive">Is Active
+                        <input type="checkbox" name="isActive" [(ngModel)]="employee.isActive">Is Active
                     </label>
                 </div>
             </div>
             <div class="form-group">
                 <label for="department">Department</label>
-                <select id="department" name="department" [(ngModel)]="department" class="form-control">
+                <select id="department" name="department" [(ngModel)]="employee.department" class="form-control">
                     <option *ngFor="let dept of departments" [value]=dept.id>{{dept.name}}</option>
                 </select>
             </div>
             <div class="row">
                 <div class="form-group col-md-4">
                     <label for="dateOfBirth">Date of Birth</label>
-                    <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dateOfBirth" placement="top"
+                    <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="employee.dateOfBirth" placement="top"
                         class="form-control" type="text" bsDatepicker [bsConfig]="datePickerConfig" />
                 </div>
             </div>
-            
+
             <div class="form-group">
                 <label for="photoPath">Photo Path</label>
-                <input id="photoPath" type="text" class="form-control" name="photoPath" [(ngModel)]="photoPath">
+                <input id="photoPath" type="text" class="form-control" name="photoPath"
+                    [(ngModel)]="employee.photoPath">
             </div>
             <div class="form-group">
                 <button (click)="togglePhotoPreview()" class="btn btn-primary">
-                  {{previewPhoto ? "Hide " : "Show " }} Preview
+                    {{previewPhoto ? "Hide " : "Show " }} Preview
                 </button>
-              </div>
+            </div>
             <div class="form-group">
-                <img [src]="photoPath" height="200" width="200" *ngIf="previewPhoto"/>
+                <img [src]="employee.photoPath" height="200" width="200" *ngIf="previewPhoto" />
             </div>
         </div>
 
         <div class="panel-footer">
-            <button class="btn btn-primary" type="submit">Save</button>
+            <button class="btn btn-primary" type="submit" [disabled]="employeeForm.invalid">Save</button>
         </div>
     </div>
 </form>
 
-Angular Generated Forom Model : {{employeeForm.value | json}}
+Angular Generated Form Model : {{employeeForm.value | json}}
+<br />
+<br />
+Employee model values : {{employee| json}}
