--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -15,12 +15,12 @@
 
             <div class="form-group" [class.has-error]="email.invalid && email.touched">
                 <label for="email" class="control-label">Email</label>
-                <input id="email" required email type="text" class="form-control" name="email"
+                <input id="email" required pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(gmail)\.com$" type="text" class="form-control" name="email"
                     [(ngModel)]="employee.email" #email="ngModel">
                 <span class="help-block" *ngIf="email.errors?.required && email.touched">
                     Email is required
                 </span>
-                <span class="help-block" *ngIf="email.errors?.email && email.touched">
+                <span class="help-block" *ngIf="email.errors?.pattern && email.touched">
                     Email is Invalid
                 </span>
             </div>
@@ -31,34 +31,40 @@
                     [(ngModel)]="employee.phoneNumber">
             </div>
 
-            <div class="form-group">
-                <label>Contact Preference</label>
+            <div class="form-group" [class.has-error]="contactPreference.invalid && contactPreference.touched">
+                <label class="control-label">Contact Preference</label>
                 <div class="form-control">
                     <label class="radio-inline">
-                        <input type="radio" name="contactPreference" value="email"
-                            [(ngModel)]="employee.contactPreference">
+                        <input type="radio" required name="contactPreference" value="email"
+                            [(ngModel)]="employee.contactPreference" #contactPreference="ngModel">
                         Email
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" name="contactPreference" value="phone"
-                            [(ngModel)]="employee.contactPreference">
+                        <input type="radio" required name="contactPreference" value="phone"
+                            [(ngModel)]="employee.contactPreference" #contactPreference="ngModel">
                         Phone
                     </label>
                 </div>
+                <span class="help-block" *ngIf="gender.invalid && gender.touched">
+                    Contact preference is required
+                </span>
             </div>
 
-            <div class="form-group">
-                <label>Gender</label>
+            <div class="form-group"  [class.has-error]="gender.invalid && gender.touched">
+                <label  class="control-label">Gender</label>
                 <div class="form-control">
                     <label class="radio-inline">
-                        <input type="radio" name="gender" value="male" [(ngModel)]="employee.gender">
+                        <input type="radio" required  name="gender" value="male" #gender="ngModel" [(ngModel)]="employee.gender">
                         Male
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" name="gender" value="female" [(ngModel)]="employee.gender">
+                        <input type="radio" required name="gender" value="female" [(ngModel)]="employee.gender" #gender="ngModel">
                         Female
                     </label>
                 </div>
+                <span class="help-block" *ngIf="gender.invalid && gender.touched">
+                    Gender is required
+                </span>
             </div>
             <div class="form-group">
                 <div class="form-control">
